feat:Implement multiple book types via codebase refactor